fixing the overflow and adding some animations

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -1,9 +1,9 @@
 // COLOR VARIABLES
-$color-primary: #04C2C9;
-$color-primary-dark: #00A1A7;
+$color-primary: #04c2c9;
+$color-primary-dark: #00a1a7;
 
-$color-secondary: #E31B6D;
-$color-secondary-dark: #BA265D;
+$color-secondary: #e31b6d;
+$color-secondary-dark: #ba265d;
 $color-secondary-darker: #a32453;
 
 $color-tertiary-light: #2998ff;
@@ -16,7 +16,7 @@ $color-grey-dark-1: #999;
 $color-grey-dark-2: #777;
 $color-grey-dark-3: #333;
 $color-grey-dark-4: #252934;
-$color-grey-dark-5: #1B242F;
+$color-grey-dark-5: #1b242f;
 
 $color-white: #fff;
 $color-black: #000;
@@ -33,46 +33,48 @@ $bp-small: 43.75em; // 700px
 $bp-smallest: 31.25em; // 500px
 $bp-phone: 25em; // 400px
 
-
 *,
 *::before,
 *::after {
-    margin: 0;
-    padding: 0;
-    box-sizing: inherit;
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit;
 }
 
 html {
-    box-sizing: border-box;
-    font-size: 62.5%; // 10px / 16px = 62.5% => 1rem = 10px
+  box-sizing: border-box;
+  font-size: 62.5%; // 10px / 16px = 62.5% => 1rem = 10px
 
-    @media only screen and (max-width: $bp-largest) {
-        font-size: 50%;
-    }
+  overflow-x: hidden;
 
-    @media only screen and (max-width: $bp-phone) {
-        font-size: 40%;
-    }
+  @media only screen and (max-width: $bp-largest) {
+    font-size: 50%;
+  }
+
+  @media only screen and (max-width: $bp-phone) {
+    font-size: 40%;
+  }
 }
 
 body {
-    font-family: $font-primary;
-    color: $color-black;
-    font-weight: 300;
-    line-height: 1.6;
+  font-family: $font-primary;
+  color: $color-black;
+  font-weight: 300;
+  line-height: 1.6;
 
-    overflow-x: hidden;
+  overflow-x: hidden;
 }
 
 .container {
-    display: grid;
-    grid-template-rows: 100vh repeat(5, min-content);
-    grid-template-columns: [full-start] minmax(6rem, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end] ) [center-end] minmax(6rem, 1fr) [full-end];
+  display: grid;
+  grid-template-rows: 100vh repeat(5, min-content);
+  grid-template-columns: [full-start] minmax(6rem, 1fr) [center-start] repeat(
+      8,
+      [col-start] minmax(min-content, 14rem) [col-end]
+    ) [center-end] minmax(6rem, 1fr) [full-end];
 
-    & > * {
-        // padding: 40px;
-        font-size: 1.75rem;
-    }
-
-    
+  & > * {
+    // padding: 40px;
+    font-size: 1.75rem;
+  }
 }
